--- a/vagrant/catalog/static/styles.css
+++ b/vagrant/catalog/static/styles.css
@@ -1,13 +1,13 @@
 body {
     font-family: sans-serif;
-    background-color: #333333
+    background-color: #eeeeee
 }
 
 h1,
 h2,
 h3,
 h4 {
-    color: #ffffff;
+    color: #444444;
 }
 
 h1,
@@ -27,12 +27,12 @@ h2 {
 p,
 dd,
 dt {
-    color: #cccccc;
+    color: #252525;
 }
 
 a {
     text-decoration: none;
-    color: #ffffcc;
+    color: #2222dd;
     font-size: .75em;
 }
 
@@ -44,7 +44,7 @@ a {
     padding: 5px;
     margin: 5px;
     border-color: #999999;
-    background-color: #333333
+    background-color: #dddddd;
 }
 
 .header {
@@ -66,7 +66,9 @@ a {
     float: right;
 }
 
-.editdeletepane {}
+.editdeletepane {
+	   color: #444444;
+}
 
 .flash {
     background: #cee5f5;
