--- a/vagrant/catalog/templates/show-item.html
+++ b/vagrant/catalog/templates/show-item.html
@@ -7,11 +7,10 @@
 	<body>
 	    <div class = 'pane'>
 		    <div class = 'header'>
-		        <h1>{{ category.name }}</h1>
+		        <h1>{{ item.name }}</h1>
 	        </div>
 			</br>
-	        <a href = '{{url_for('addNewItem')}}'>Create New Item</a>
-
+	        
 
             <div class = 'flash'>
 		        {% with messages = get_flashed_messages() %}
@@ -28,28 +27,20 @@
             </div>
 
 
-		    {% for i in items %}
-            <div class = 'nameAndPrice'>
-		        <span class = 'name'><p>{{i.name}}</p></span>
-
-		        <span class = 'price'>
-		            <p>{{i.price}} </p>
-	            </span>
-	        </div>
-
-
 	        <div class = 'description'>
-		        <p>{{i.description}}</p>
+		        <p>{{item.description}}</p>
+				<p>{{item.price}}</p>
+				<p>Category: <a href='{{url_for('ShowItemsInCategory', category_id = category.id)}}'>{{category.name}}</a></p>
 	        </div>
 
 
 	        <div class = "editdeletepane">
 
-	            <a href='{{url_for('editItem', catalog_item_id = i.id)}}' >Edit</a> | 
-	            <a href='{{url_for('deleteItem', catalog_item_id = i.id)}}' >
+	            <a href='{{url_for('editItem', catalog_item_id = item.id)}}' >Edit</a> | 
+	            <a href='{{url_for('deleteItem', catalog_item_id = item.id)}}' >
 	            Delete</a>
 	        </div>
-		    {% endfor %}
+		    
 
 			</br>
             </div>
