--- a/vagrant/catalog/templates/show-items-in-category.html
+++ b/vagrant/catalog/templates/show-items-in-category.html
@@ -12,7 +12,6 @@
 			</br>
 	        <a href = '{{url_for('addNewItem')}}'>Create New Item</a>
 
-
             <div class = 'flash'>
 		        {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -26,11 +25,11 @@
                 {% endwith %}
 
             </div>
-
+			</br>
 
 		    {% for i in items %}
             <div class = 'nameAndPrice'>
-		        <span class = 'name'><p>{{i.name}}</p></span>
+		        <span class = 'name'><p><h2><a href='{{url_for('ShowItem', catalog_item_id = i.id)}}' >{{i.name}}</a></h2></p></span>
 
 		        <span class = 'price'>
 		            <p>{{i.price}} </p>
@@ -46,12 +45,14 @@
 	        <div class = "editdeletepane">
 
 	            <a href='{{url_for('editItem', catalog_item_id = i.id)}}' >Edit</a> | 
-	            <a href='{{url_for('deleteItem', catalog_item_id = i.id)}}' >
-	            Delete</a>
+	            <a href='{{url_for('deleteItem', catalog_item_id = i.id)}}' >Delete</a>
+				</br></br>
 	        </div>
 		    {% endfor %}
 
-			</br>
+			</br></br>
+			<a href='{{url_for('ShowCategories')}}'>Back to Catalog Categories</a>
+			</br></br>
             </div>
         </div>
 	</body>
