--- a/vagrant/catalog/templates/new-item.html
+++ b/vagrant/catalog/templates/new-item.html
@@ -7,11 +7,23 @@
 <h1>Add New Item</h1>
 
 <div class = 'pane'>
-<form action="{{ url_for('addNewItem')}}" method = 'post'>
+<form action="{{ url_for('addNewItem', categories = categories)}}" method = 'POST'>
 
 <dl>
 	<dt>Name:</dt>
 		<dd><input type ='text' size='30' name='name'></dd>
+	<dt>Description:</dt>
+		<dd><textarea name = 'description' rows='5' cols='40'></textarea></dd>
+	<dt>Price:</dt>
+		<dd><input type = 'text' size = '8' name='price'></dd>
+	<dt>Category:</dt>
+		<dd>
+			<select name = 'category_id'>
+				{% for i in categories %}
+					<option value = '{{i.id}}'>{{i.name}}</option>
+				{% endfor %}
+			</select>
+		</dd>
 </dl>
 
 
