--- a/vagrant/catalog/templates/new-category.html
+++ b/vagrant/catalog/templates/new-category.html
@@ -7,7 +7,7 @@
 <h1>Add New Category</h1>
 
 <div class = 'pane'>
-<form action="{{ url_for('addNewCategory' )}}" method = 'post'>
+<form action="{{ url_for('addNewCategory' )}}" method = 'POST'>
 
 <dl>
 	<dt>Name:</dt>
