--- a/vagrant/catalog/templates/edit-category.html
+++ b/vagrant/catalog/templates/edit-category.html
@@ -6,7 +6,7 @@
 
 <h1> Edit Category {{category_id}}</h1>
 
-<form action="{{ url_for('editCategory', category = category, category_id = category_id)}}" method = 'post'>
+<form action="{{ url_for('editCategory', category = category, category_id = category_id)}}" method = 'POST'>
 
 <dl>
 	<dt>Name:</dt>
