added flash message to add item

--- a/vagrant/catalog/templates/show-items-in-category.html
+++ b/vagrant/catalog/templates/show-items-in-category.html
@@ -10,7 +10,6 @@
 		        <h1>{{ category.name }}</h1>
 	        </div>
 			</br>
-	        <a href = '{{url_for('addNewItem')}}'>Create New Item</a>
 
             <div class = 'flash'>
 		        {% with messages = get_flashed_messages() %}
@@ -26,28 +25,28 @@
 
             </div>
 			</br>
-
+			
+			<a href = '{{url_for('addNewItem')}}'>Create New Item</a></br></br>
+			
 		    {% for i in items %}
-            <div class = 'nameAndPrice'>
-		        <span class = 'name'><p><h2><a href='{{url_for('ShowItem', catalog_item_id = i.id)}}' >{{i.name}}</a></h2></p></span>
+				<div class = 'nameAndPrice'>
+					<span class = 'name'><p><h2><a href='{{url_for('ShowItem', catalog_item_id = i.id)}}' >{{i.name}}</a></h2></p></span>
 
-		        <span class = 'price'>
-		            <p>{{i.price}} </p>
-	            </span>
-	        </div>
+					<span class = 'price'>
+						<p>{{i.price}} </p>
+					</span>
+				</div>
+
+				<div class = 'description'>
+					<p>{{i.description}}</p>
+				</div>
 
 
-	        <div class = 'description'>
-		        <p>{{i.description}}</p>
-	        </div>
-
-
-	        <div class = "editdeletepane">
-
-	            <a href='{{url_for('editItem', catalog_item_id = i.id)}}' >Edit</a> | 
-	            <a href='{{url_for('deleteItem', catalog_item_id = i.id)}}' >Delete</a>
-				</br></br>
-	        </div>
+				<div class = "editdeletepane">
+					<a href='{{url_for('editItem', catalog_item_id = i.id)}}'>Edit</a> |  
+					<a href='{{url_for('deleteItem', catalog_item_id = i.id)}}'>Delete</a></br>
+					</br>
+				</div>
 		    {% endfor %}
 
 			</br></br>
