--- a/vagrant/catalog/templates/edit-item.html
+++ b/vagrant/catalog/templates/edit-item.html
@@ -12,7 +12,7 @@
 	<dt>Name:</dt>
 		<dd><input type = 'text' size='30' name='name' placeholder = '{{item.name }}'></dd>
 	<dt>Description:</dt>
-		<dd><textarea name = 'description' rows='5' cols='40' placeholder = '{{item.description }}'></textarea></dd>
+		<dd><textarea name = 'description' rows='5' cols='40'>{{item.description }}</textarea></dd>
 	<dt>Price:</dt>
 		<dd><input type = 'text' size = '8' name='price' placeholder = '{{item.price}}'></dd>
 	<dt>Category:</dt>
