--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -24,7 +24,7 @@
     <div class="page__wrapper">
 
       <header>
-        <div class="header__brand__wrapper">
+        <div class="header__left__wrapper">
 		  <img class="header__logo" src="../static/images/winking_emoji_540x540.jpg" alt="winking emoji">
 		  <div class="header__text__wrapper">
             <h1 class="header__name">TLS.com</h1>
@@ -48,7 +48,7 @@
           <h2 class="hero__text">Catalog Project</h2>
         </div> <!-- end of hero__image__wrapper -->
 
-        <section class="featured__work">
+        <section class="categories">
           <header>
             <h2 class="section__title">Categories</h2>
           </header>
@@ -86,7 +86,7 @@
             </p>
           </article> <!-- end of Project Three -->
 
-        </section> <!-- end of featured__work section -->
+        </section> <!-- end of categories section -->
 
         <footer>
           <h4>Follow Glen Bland on social media</h4>
