--- a/vagrant/catalog/templates/index2.html
+++ b/vagrant/catalog/templates/index2.html
@@ -49,9 +49,9 @@
         </div> <!-- end of hero__image__wrapper -->
 
 		<div class="section__wrapper">
-		  <div class="categories">Categories</div>
-		  <div class="items">Items</div>
-		</div>
+		  <section class="categories">Categories</section>
+		  <section class="items">Items</section>
+		</div> <!-- end of section__wrapper -->
 		
         <footer>
           <h4>Follow Glen Bland on social media</h4>
