--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -90,7 +90,7 @@
 			<div class="item__edit__delete">Edit | Delete</div>
 		  </div> <!-- end of item__wrapper -->
 		 
-        </section> <!-- end of categories section -->
+        </section> <!-- end of items section -->
 
         <footer>
           <h4>Follow Glen Bland on social media</h4>
