--- a/vagrant/catalog/static/style3.css
+++ b/vagrant/catalog/static/style3.css
@@ -161,25 +161,32 @@ header {
 section.categories {
 	background: #ffffff;
 	margin: 2px 5px 5px 5px; /* top right bottom left */
-	padding: 5px;
+	padding: 0;
 	flex: 1 1 auto; /* flex-grow flex-shrink flex-basis */
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+    flex-wrap: wrap;
 }
 
 section.items {
 	background: #ffffff;
 	margin: 0 5px 5px 5px; /* top right bottom left */
-	padding: 5px;
+	padding: 0;
 	flex: 1 1 auto; /* flex-grow flex-shrink flex-basis */
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .section__title {
     font-size: 2em;
-    margin: 0 0 12px; /* top left-and-right bottom */
+    margin: 0 0 10px; /* top left-and-right bottom */
     display: flex;
     flex-flow: row wrap;
-    width: 50%;
+    width: 100%;
+	text-align: center;
     justify-content: center;
     padding-top: 12px;
     /* color: var(--secondary-color); */
@@ -193,7 +200,7 @@ section {
 .category {
 	font-size: 2em;
 	margin: 0;
-	padding-bottom: 3px;
+	padding: 0 5px 5px 5px; /* top right bottom left */
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
@@ -207,7 +214,7 @@ section {
 .add__category {
 	font-size: 2em;
 	margin: 0;
-	padding: 3px 0 6px;
+	padding: 3px 5px 6px; /* top left-and-right bottom */
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
@@ -479,7 +486,7 @@ i.fa {
 
     .section__title {
         font-size: 2.4em;
-        margin: 0 0 14px 0; /* top right bottom left */
+        margin: 0 0 12px 0; /* top right bottom left */
     }
 	
 	.section__wrapper {
