fixed font sizes

--- a/vagrant/catalog/templates/index2.html
+++ b/vagrant/catalog/templates/index2.html
@@ -55,12 +55,12 @@
               <h2 class="section__title">Categories</h2>
             </header>
 		    <hr>
-		    <h3 class="category">Electronics <div class="category__edit__delete"> Edit | Delete</div></h3>
-		    <h3 class="category">Kitchen <div class="category__edit__delete"> Edit | Delete</div></h3>
-		    <h3 class="category">Automotive <div class="category__edit__delete"> Edit | Delete</div></h3>
-		    <h3 class="category">Garden <div class="category__edit__delete"> Edit | Delete</div></h3>
-		    <h3 class="category">Sporting Goods <div class="category__edit__delete"> Edit | Delete</div></h3>
-		    <h3 class="add__category">Add New Category</h3>
+		    <div class="category"><h3>Electronics</h3><div class="category__edit__delete"> Edit | Delete</div></div>
+		    <div class="category"><h3>Kitchen</h3><div class="category__edit__delete"> Edit | Delete</div></div>
+		    <div class="category"><h3>Automotive</h3><div class="category__edit__delete"> Edit | Delete</div></div>
+		    <div class="category"><h3>Garden</h3><div class="category__edit__delete"> Edit | Delete</div></div>
+		    <div class="category"><h3>Sporting Goods</h3><div class="category__edit__delete"> Edit | Delete</div></div>
+		    <div class="add__category">Add New Category</div>
 		  </section> <!-- end of categories section -->
 		  
 		  <section class="items">
@@ -68,7 +68,7 @@
               <h2 class="section__title">Items</h2>
             </header>
 			<hr>
-		    <h3 class="add__item">Add New Item</h3>
+		    <div class="add__item">Add New Item</div>
 		  
 		    <div class="item__wrapper">
 		      <h3 class="item__name">Coffee Maker</h3>
