--- a/vagrant/catalog/static/style3.css
+++ b/vagrant/catalog/static/style3.css
@@ -144,7 +144,9 @@ header {
     /* text-shadow: h-shadow v-shadow blur-radius color */
     text-shadow: 1px 4px 8px #2d3c49;
 }
+
 /* flash messages */
+
 .flash__wrapper {
 	display: flex;
 	flex-flow: column nowrap; /* flex-direction flex-wrap */
@@ -198,7 +200,7 @@ section.items {
 
 .section__title {
     font-size: 2em;
-    margin: 0 0 10px; /* top left-and-right bottom */
+    margin: 0 10px 10px; /* top left-and-right bottom */
     display: flex;
     flex-flow: row wrap;
     width: 100%;
@@ -216,7 +218,7 @@ section {
 .category {
 	font-size: 2em;
 	margin: 0;
-	padding: 0 5px 5px 5px; /* top right bottom left */
+	padding: 0 30px 5px 10px; /* top right bottom left */
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
@@ -234,7 +236,7 @@ section {
 .add__category {
 	font-size: 2em;
 	margin: 0;
-	padding: 3px 5px 6px; /* top left-and-right bottom */
+	padding: 3px 10px 6px; /* top left-and-right bottom */
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
@@ -248,7 +250,7 @@ section {
 
 .item__wrapper {
 	margin: 0;
-	padding: 5px;
+	padding: 0px 10px 5px 10px; /* top right bottom left */
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
@@ -257,6 +259,10 @@ section {
 .item__name {
 	font-size: 2em;
 	padding-bottom: 3px;
+}
+
+.item__name a {
+	color: #294060;
 }
 
 .item__description {
@@ -276,14 +282,22 @@ section {
 	color: #7090ad;
 }
 
+.item__edit__delete a {
+	color: #7090ad;
+}
+
 .add__item {
 	font-size: 2em;
 	margin: 0;
-	padding: 5px;
+	padding: 5px 10px 5px 10px; /* top right bottom left */
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
 	align-items: space-around;
+	color: #7090ad;
+}
+
+.add__item a {
 	color: #7090ad;
 }
 
@@ -369,7 +383,7 @@ i.fa {
 	
 	.section__wrapper {
 		display: flex;
-		flex-flow: row wrap;
+		flex-flow: row nowrap;
 		align-items: flex-start; /* top */
 		align-content: flex-start; /* top*/
 		justify-content: space-evenly;
@@ -389,7 +403,7 @@ i.fa {
 		margin: 2px 5px 5px 5px; /* top right bottom left */
 		padding: 5px;
 		width: auto;
-		flex: 4 0 auto; /* flex-grow flex-shrink flex-basis*/
+		flex: 4 1 auto; /* flex-grow flex-shrink flex-basis*/
 	}
 
     .section__title {
@@ -436,7 +450,7 @@ i.fa {
 	
 	.section__wrapper {
 		display: flex;
-		flex-flow: row wrap;
+		flex-flow: row nowrap;
 		align-items: flex-start; /* top */
 		align-content: flex-start; /* top*/
 		justify-content: space-evenly;
@@ -456,7 +470,7 @@ i.fa {
 		margin: 2px 5px 5px 5px; /* top right bottom left */
 		padding: 5px;
 		width: auto;
-		flex: 4 0 auto; /* flex-grow flex-shrink flex-basis*/
+		flex: 4 1 auto; /* flex-grow flex-shrink flex-basis*/
 	}
 
     .section__title {
@@ -515,7 +529,7 @@ i.fa {
 	
 	.section__wrapper {
 		display: flex;
-		flex-flow: row wrap;
+		flex-flow: row nowrap;
 		align-items: flex-start; /* top */
 		align-content: flex-start; /* top*/
 		justify-content: space-evenly;
@@ -535,7 +549,7 @@ i.fa {
 		margin: 2px 5px 5px 5px; /* top right bottom left */
 		padding: 5px;
 		width: auto;
-		flex: 4 0 auto; /* flex-grow flex-shrink flex-basis*/
+		flex: 4 1 auto; /* flex-grow flex-shrink flex-basis*/
 	}
 
     article {
